Stopwatch is now vertical on mobile UIs

--- a/public/code/master.css
+++ b/public/code/master.css
@@ -56,7 +56,7 @@ header {
   transform: translate(-50%, -70%);
 }
 
-#hours, #minutes, #seconds, .smallLabel, .gridDiv, #span1, #span2, #span3 {
+#hours, #minutes, #seconds, .smallLabel, .gridDiv, #span1, #span2, #span3, #span4, #span5, #span6 {
   display: inline;
 }
 
@@ -618,7 +618,7 @@ li svg {
     font-size: 10vh;
   }
 
-  .timerInput, .timerDisplay {
+  .timerInput, .timerDisplay, .stopwatchDisplay {
     width: 100%;
     text-align: center;
   }
@@ -672,17 +672,17 @@ li svg {
   .gridDiv {
     display: block;
   }
+}
 
-  #hours, #minutes, #seconds {
-    position: relative;
-    left: 1.5vh;
-  }
-  
-  .smallLabel {
-    position: relative;
-    left: -1.5vh;
-    font-size: 12.5vh;
-  }
+#hours, #minutes, #seconds {
+  position: relative;
+  left: 1.5vh;
+}
+
+.smallLabel {
+  position: relative;
+  left: -1.5vh;
+  font-size: 12.5vh;
 }
 
 /* Dark Mode UI */
